recent work change

--- a/index.html
+++ b/index.html
@@ -104,11 +104,10 @@
                                 href="https://www.woolmagazine.com/" target="_blank"><span>Wipro
                                     Woolmagazine</span></a></li>
                         <li data-aos="fade-up" data-aos-delay="500"><a data-info="woodcraft"
-                                href="http://hitechindia.regalixdev.com/wipro/microsites/women-in-business/women-in-business.html"
+                                href="https://yadhunandangowda.github.io/woodCraft/"
                                 target="_blank"><span>Wood craft</span></a></li>
-                        <li data-aos="fade-up" data-aos-delay="600"><a data-info="mobikart"
-                                href="https://yadhunandangowda.github.io/mobikart" target="_blank"><span>Mobikart
-                                    (React)</span></a></li>
+                        <li data-aos="fade-up" data-aos-delay="600"><a data-info="comfysloth"
+                                href="https://yadhunandangowda.github.io/comfy/#/" target="_blank"><span>Comfy Sloth</span></a></li>
                     </ul>
                 </div>
             </div>
