profile pic change

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="banner common">
             <div class="content">
                 <div class="profilePic" data-aos="fade-right" data-aos-delay="200">
-                    <img src="./images/yadhuframe1.png" alt="">
+                    <img src="./images/profilepic.jpeg" alt="">
                 </div>
                 <div class="decription" data-aos="fade-left" data-aos-delay="300">
                     <h1 class="designation">Software developer (Frontend)</h1>
